--- a/project.html
+++ b/project.html
@@ -85,38 +85,38 @@
                      <h2>Best Sellers</h2>
                      <div class= "col4-row1">
                          <div class="spare-parts">
-                             <img src="image2.jpg" alt="">
-                             <h3>Memory-chip</h3>
+                              <img src="first_generation.jpg" alt="">
+                             <h3>1-generation computer</h3>
                          </div>
                          <div class="spare-parts">
                             <img src="image2.jpg" alt="">
-                            <h3>Memory-chip</h3>
+                            <h3>2-generation computer</h3>
                         </div>
                         <div class="spare-parts">
                             <img src="image3rd.jpg" alt="">
-                            <h3>Memory-chip</h3>
+                            <h3>3-generation computer</h3>
                         </div>
                         <div class="spare-parts">
                             <img src="computer-fourth-generation.jpg" alt="">
-                            <h3>Memory-chip</h3>
+                            <h3>4-generation computer</h3>
                         </div>
                      </div>
                      <div class= "col4-row2">
                         <div class="spare-parts">
                             <img src="Fifth Generation Computer - Desktop.png" alt="" height="150px">
-                            <h3>Memory-chip</h3>
+                            <h3>5-generation computer</h3>
                         </div>
                         <div class="spare-parts">
-                           <img src="motherboards.jpg" alt="">
-                           <h3>Memory-chip</h3>
+                           <img src="mother-board-1481694792-2637912.jpeg" alt="">
+                           <h3>Motherboard</h3>
                        </div>
                        <div class="spare-parts">
-                           <img src="image3rd.jpg" alt="">
-                           <h3>Memory-chip</h3>
+                           <img src="chief_component_of_first_generation_computer_was1538216221.jpg" alt="">
+                           <h3>Chief Components</h3>
                        </div>
                        <div class="spare-parts">
-                           <img src="image2.jpg" alt="">
-                           <h3>Memory-chip</h3>
+                          img src="transistors.png" alt="">
+                           <h3>Transistor</h3>
                        </div>
                     </div>
                 </div>
