--- a/project.html
+++ b/project.html
@@ -103,7 +103,7 @@
                      </div>
                      <div class= "col4-row2">
                         <div class="spare-parts">
-                            <img src="Fifth Generation Computer - Desktop.png" alt="" height="150px">
+                            <img src="Fifth Generation Computer - Desktop.png" alt="">
                             <h3>5-generation computer</h3>
                         </div>
                         <div class="spare-parts">
@@ -115,7 +115,7 @@
                            <h3>Chief Components</h3>
                        </div>
                        <div class="spare-parts">
-                          img src="transistors.png" alt="">
+                          <img src="transistors.png" alt="">
                            <h3>Transistor</h3>
                        </div>
                     </div>
